<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a15008377.opsc7311_assign2_15008377.UpdateClientActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_client_id"
        android:text="@string/label_client_id"
        style="@style/TextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_client_id"
        android:layout_below="@id/label_client_id"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_client_name"
        android:layout_below="@+id/text_client_id"
        android:text="@string/label_client_name"
        style="@style/TextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_client_name"
        android:layout_below="@id/label_client_name"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_client_email"
        android:layout_below="@+id/text_client_name"
        android:text="@string/label_client_email"
        style="@style/TextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_client_email"
        android:id="@+id/text_client_email"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_client_address"
        android:layout_below="@+id/text_client_email"
        android:text="@string/label_client_address"
        style="@style/TextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_client_address"
        android:id="@+id/text_client_address"
        android:inputType="text"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_update_client"
        android:layout_below="@+id/text_client_address"
        android:text="@string/button_update_client"
        style="@style/TextStyle"
        android:onClick="updateClientOnClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete_client"
        android:layout_below="@+id/button_update_client"
        android:text="@string/button_delete_client"
        style="@style/TextStyle"
        android:onClick="deleteClientOnClick"/>
</RelativeLayout>