<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a15008377.opsc7311_assign2_15008377.AddDeliveryActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_delivery_id"
        android:text="@string/label_delivery_id"
        style="@style/TextStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_delivery_id"
        android:layout_below="@id/label_delivery_id"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_delivery_client"
        android:layout_below="@+id/text_delivery_id"
        android:text="@string/label_client_name"
        style="@style/TextStyle"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_delivery_client"
        android:layout_below="@+id/label_delivery_client"
        style="@style/TextStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_delivery_date"
        android:layout_below="@+id/spinner_delivery_client"
        android:text="@string/label_delivery_date"
        style="@style/TextStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_delivery_date"
        android:layout_toRightOf="@+id/label_delivery_date"
        android:layout_below="@id/spinner_delivery_client"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        style="@style/TextStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Date"
        android:onClick="chooseDateOnClick"
        android:layout_below="@+id/label_delivery_date"
        android:id="@+id/button_choose_date"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_delivery"
        android:text="@string/button_add_delivery"
        android:layout_below="@+id/button_choose_date"
        android:onClick="addDeliveryOnClick"/>

</RelativeLayout>
